--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server-dev": "npx nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
     "jsonwebtoken": "^9.0.0"
   },
   "devDependencies": {
+    "nodemon": "^2.0.22",
     "prisma": "^4.14.0"
   }
 }
